<resources>
    <string name="app_name">Viewbuilder</string>
    <string name="name">Enter your name</string>
    <string name="roll">Enter your roll number</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="etname">Enter your name</string>
    <string name="etroll">Enter your roll number</string>
    <string name="done">Done</string>
    <string name="click">\Click</string>
    <string name="three">Three Character</string>
    <string name="four">Four Character</string>
    <string name="next">Next</string>
</resources>