<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/name"
      android:layout_marginTop="50dp"
      android:layout_marginStart="80dp"
      android:id="@+id/tvname"
      android:textSize="30sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roll"
        android:layout_marginTop="10dp"
        android:layout_marginStart="50dp"
        android:textSize="30sp"
        android:id="@+id/tvroll"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:layout_marginStart="140dp"
        android:id="@+id/btupdate"
        android:layout_marginTop="80dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:layout_marginStart="145dp"
        android:layout_marginTop="40dp"
        android:id="@+id/btdelete"/>
    <Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/next"
      android:layout_marginStart="140dp"
      android:layout_marginTop="40dp"
      android:id="@+id/btnext"
      />
</LinearLayout>