<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomDialog">
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent=".3"
        android:orientation="horizontal"
        android:id="@+id/guide_h_30"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent=".23"
        android:id="@+id/guide_h_23"
        android:orientation="horizontal"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent=".30"
        android:orientation="vertical"
        android:id="@+id/guide_v_30"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent=".70"
        android:orientation="vertical"
        android:id="@+id/guide_v_70"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".37"
        android:id="@+id/guide_h_37"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent=".44"
        android:orientation="horizontal"
        android:id="@+id/guide_h_44"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent=".50"
        android:id="@+id/guide_h_50"
        android:orientation="horizontal"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent=".57"
        android:id="@+id/guide_h_57"
        android:orientation="horizontal"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvthreechar"
        android:text="@string/three"
        app:layout_constraintStart_toStartOf="@id/guide_v_30"
        app:layout_constraintEnd_toEndOf="@id/guide_v_70"
        app:layout_constraintTop_toTopOf="@id/guide_h_23"
        app:layout_constraintBottom_toBottomOf="@id/guide_h_30"
        android:textSize="@dimen/three" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/three"
        app:layout_constraintTop_toTopOf="@id/guide_h_30"
        app:layout_constraintBottom_toBottomOf="@id/guide_h_37"
        app:layout_constraintStart_toStartOf="@id/guide_v_30"
        app:layout_constraintEnd_toEndOf="@id/guide_v_70"
        android:id="@+id/etthree"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvfourchar"
        android:text="@string/four"
        app:layout_constraintTop_toTopOf="@id/guide_h_37"
        app:layout_constraintBottom_toBottomOf="@id/guide_h_44"
        app:layout_constraintStart_toStartOf="@id/guide_v_30"
        app:layout_constraintEnd_toEndOf="@id/guide_v_70"
        android:textSize="@dimen/four"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/four"
        app:layout_constraintTop_toTopOf="@id/guide_h_44"
        app:layout_constraintBottom_toBottomOf="@id/guide_h_50"
        app:layout_constraintStart_toStartOf="@id/guide_v_30"
        app:layout_constraintEnd_toEndOf="@id/guide_v_70"
        android:id="@+id/etfour"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btclick"
        android:text="@string/click"
        app:layout_constraintTop_toTopOf="@id/guide_h_50"
        app:layout_constraintEnd_toEndOf="@id/guide_v_70"
        app:layout_constraintStart_toStartOf="@id/guide_v_30"
        app:layout_constraintBottom_toBottomOf="@id/guide_h_57"
        />
</androidx.constraintlayout.widget.ConstraintLayout>